--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "openlegion"
 version = "0.1.0"
@@ -26,10 +30,14 @@ dev = [
 
 channels = [
     "python-telegram-bot>=21.0",
+    "discord.py>=2.0",
 ]
 
 [project.scripts]
 openlegion = "src.cli:cli"
+
+[tool.setuptools.packages.find]
+where = ["."]
 
 [tool.ruff]
 target-version = "py312"
