Add model failover chain for LLM API proxy
When a model is down, rate-limited, or its API key is exhausted, the
mesh credential vault now cascades to the next model in a configurable
failover chain — transparent to agents.

- Add src/host/failover.py with ModelHealthTracker (exponential cooldown
  for transient errors, 1h cooldown for billing/auth) and FailoverChain
- Modify CredentialVault to accept failover_config, wrap chat calls in
  _call_llm_with_failover, and add streaming failover support
- Permanent errors (400, content policy) do not cascade
- Embedding calls skip failover (incompatible vector spaces)
- Fix cost tracking to attribute to actual responding model
- Add GET /mesh/model-health diagnostic endpoint
- Wire failover config from mesh.yaml in CLI, enhance /costs display
- Add 21 new tests (test_failover.py + test_credentials.py integration)

--- a/config/mesh.yaml
+++ b/config/mesh.yaml
@@ -6,6 +6,11 @@ llm:
   embedding_model: text-embedding-3-small
   max_tokens: 4096
   temperature: 0.7
+  # failover:
+  #   anthropic/claude-haiku-4-5-20251001:
+  #     - openai/gpt-4o-mini
+  #   anthropic/claude-sonnet-4-5-20250929:
+  #     - openai/gpt-4o
 channels:
   telegram:
     enabled: true
