Streamline install UX and remove unnecessary container deps
Remove litellm and pyyaml from Dockerfile.agent (agents never import
them — saves ~130MB and 40+ transitive packages from container builds).

Simplify setup wizard from 9 prompts to 5 by removing Telegram/Discord,
collaboration, and Docker build steps. Docker image now builds lazily on
first `openlegion start`. Collaboration defaults to enabled.

Show real pip progress in install.sh instead of suppressing all output.
Add pip availability check. Add install.ps1 for Windows. Show Docker
build step progress instead of silent capture. Expand troubleshooting
in QUICKSTART.md with Windows-specific fixes.

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -11,11 +11,12 @@ RUN useradd --create-home --uid 1000 --shell /bin/bash agent
 
 WORKDIR /app
 
-# Python dependencies
+# Python dependencies — only what agents actually import
+# (litellm, pyyaml, click, docker are host-only — not needed here)
 # sqlite-vec is built from source to ensure correct architecture on all platforms
 COPY pyproject.toml .
 RUN pip install --no-cache-dir \
-    fastapi uvicorn httpx pydantic litellm pyyaml playwright \
+    fastapi uvicorn httpx pydantic playwright \
     && pip install --no-cache-dir --no-binary sqlite-vec sqlite-vec
 
 # Install Chromium for browser automation — shared path so non-root agent can access it
