Add MCP tool support and comprehensive system documentation
MCP Integration (Roadmap 1.2):
- New MCPClient class managing MCP server lifecycles via stdio transport
- SkillRegistry integration: MCP tools discovered, registered, and routed
- Agent entry point reads MCP_SERVERS env var, starts servers in lifespan
- Runtime pipeline passes mcp_servers config through to containers
- Health monitor preserves MCP config across agent restarts
- Added mcp dependency to Dockerfile.agent and pyproject.toml
- 17 new tests (10 unit with mocked SDK + 7 E2E with real MCP server)
- Echo MCP test fixture server with echo/add/fail tools

Documentation (docs/):
- architecture.md: trust zones, component map, data flow, runtime backends
- security.md: five defense layers, container hardening, credential vault
- agent-tools.md: complete reference for all built-in tools with accurate params
- mcp.md: MCP integration guide with config, architecture, troubleshooting
- memory.md: five-layer memory architecture, context management thresholds
- workflows.md: DAG orchestration, step fields, failure handlers, data flow
- configuration.md: agents.yaml, mesh.yaml, permissions.json, env vars
- channels.md: Telegram, Discord, webhook setup with pairing and commands
- triggering.md: cron, heartbeats, webhooks, pub/sub automation
- development.md: testing guide, code patterns, full project structure

All docs verified against actual codebase for accuracy.

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -17,7 +17,7 @@ WORKDIR /app
 # sqlite-vec requires amd64 (ARM wheels have broken 32-bit .so files)
 COPY pyproject.toml .
 RUN pip install --no-cache-dir \
-    fastapi uvicorn httpx pydantic playwright sqlite-vec
+    fastapi uvicorn httpx pydantic playwright sqlite-vec mcp
 
 # Install Chromium for browser automation — shared path so non-root agent can access it
 ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers
