--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,17 @@ htmlcov/
 data/
 *.db-wal
 *.db-shm
+config/mesh.yaml
 config/agents.yaml
+config/permissions.json
 config/team.yaml
 config/cron.json
 config/webhooks.json
+config/workflows/
 config/telegram_paired.json
 config/discord_paired.json
-benchmark_report.md
+PROJECT.md
+SOUL.md
 ROADMAP.md
+benchmark_report.md
+*.log
