Add Slack channel adapter with Socket Mode (Roadmap 2.3)
Slack channel using slack-bolt AsyncApp + AsyncSocketModeHandler.
Thread-aware routing via composite user key (user_id:thread_ts) gives
independent per-thread agent tracking. Pairing, access control, and
!-to-/ command translation follow existing Discord/Telegram patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ config/webhooks.json
 config/workflows/
 config/telegram_paired.json
 config/discord_paired.json
+config/slack_paired.json
 PROJECT.md
 SOUL.md
 ROADMAP.md
