Add WhatsApp channel adapter with Cloud API webhooks (Roadmap 2.3)
WhatsApp Cloud API adapter using httpx (no new dependency). Mounts
GET/POST webhook endpoints on the mesh FastAPI app for Meta verification
and incoming message processing. Text-only initially; media types are
logged and skipped. Pairing and access control follow existing patterns.
_start_channels now returns webhook routers for app mounting.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ config/workflows/
 config/telegram_paired.json
 config/discord_paired.json
 config/slack_paired.json
+config/whatsapp_paired.json
 PROJECT.md
 SOUL.md
 ROADMAP.md
