Add labeled screenshots to browser_screenshot tool
browser_screenshot now accepts labeled=True to overlay numbered red
labels on interactive elements. Auto-calls browser_snapshot if refs
are empty. Draws red bounding boxes + white number labels using PIL.
Pillow added to Dockerfile.agent dependencies.

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -17,7 +17,7 @@ WORKDIR /app
 # sqlite-vec requires amd64 (ARM wheels have broken 32-bit .so files)
 COPY pyproject.toml .
 RUN pip install --no-cache-dir \
-    fastapi uvicorn httpx pydantic playwright sqlite-vec mcp camoufox
+    fastapi uvicorn httpx pydantic playwright sqlite-vec mcp camoufox Pillow
 
 # Install browsers — must run as root before USER agent.
 # Playwright Chromium goes to /opt/pw-browsers; Camoufox fetches its Firefox binary.
